--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,18 @@
     {% block content %}
     
     {% endblock %}
-
+    <div class="admin">
+        <div class="admin-panel">
+            <div class="admin-panel-top">
+                <div class="admin-panel-top-item">
+                    <a href="admin/" class="admin-panel-top-item-link"></a>
+                </div>
+            </div>
+            <div class="admin-panel-bottom">
+                
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="{% static 'users/js/script.js' %}"></script>
 </body>
