--- a/users/static/users/css/style.scss
+++ b/users/static/users/css/style.scss
@@ -55,48 +55,62 @@ a{
 
 /* COMMON START */
 .common{
-
-  max-width: 800px;
-  margin: 20px auto 0 auto;
-  text-align: center;
-
-  & input:last-child{
-    margin: 15px 0 0 0;
-  }
+  margin: 0 auto;
   &-form{
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
     &-input{
+      padding: 0;
       width: 100%;
-      margin: 0 0 15px 0;
-      font-family: 'Rajdhani', sans-serif;
-      font-weight: 300;
-      font-size: 25px;
-      height: 50px;
+      max-width: 80%;
+      min-width: 300px;
+      height: 55px;
+      background: #000;
       color: #fff;
-      background: #000000;
-      border: 1px solid #f8bc03;
-      transition: background, border 0.5s ease;
+      font-size: 40px;
+      border: 3px #d2961e solid;
+      text-align: center;
+      font-weight: 300;
+      font-family: 'Rajdhani', sans-serif;
+      margin: 20px auto 0 auto;
+      transition: background, border ease 1s;
+
+      &:hover{
+        background: #1e1e1e;
+        border: #f8bc03 solid 3px;
+      }
       &:active{
         background: #1e1e1e;
-        border: #d2961e;
+        border: #f8bc03 solid 3px;
       }
     }
+
     &-submit{
-      width: 100%;
-      font-family: 'Rajdhani', sans-serif;
-      text-transform: uppercase;
-      font-weight: 300;
-      font-size: 25px;
-      height: 50px;
-      color: #fff;
-      background: #000000;
-      border: 1px solid #f8bc03;
-      transition: background, font-weight 0.5s ease;
+      padding: 0;
       cursor: pointer;
+      width: 100%;
+      max-width: 80%;
+      min-width: 300px;
+      margin-top: 30px;
+      height: 55px;
+      background: #000;
+      color: #fff;
+      font-size: 40px;
+      border: 3px #d2961e solid;
+      text-align: center;
+      font-weight: 300;
+      text-transform: uppercase;
+      font-family: 'Rajdhani', sans-serif;
+      transition: background, font-weight 0.5s ease;
       &:hover{
         font-weight: 700;
         background: #1e1e1e;
+        border: #f8bc03 solid 3px;
+      }
+      &:active{
+        background: #1e1e1e;
+        border: #f8bc03 solid 3px;
       }
     }
   }
@@ -105,15 +119,14 @@ a{
 
 /* HEADER START */
 header{
-  height: 70px;
+  height: auto;
   position: relative;
   top:0;
   background: #000;
   width: 100%;
   border-bottom: #d2961e solid 10px;
   .header-in{
-    height: 50px;
-    margin: 10px 0 10px 0;
+    height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -214,20 +227,96 @@ header{
     }
     &-mid{
       margin: 20px 0 15px 0;
+
+      &-profile{
+        display: flex;
+        flex-wrap: wrap;
+        &-picture{
+          width: 15%;
+          display: flex;
+          flex-direction: column;
+          &-edit{
+            border: 3px #d2961e solid;
+            border-top: none;
+            background: #000;
+            color: #f8bc03;
+            text-align: center;
+            font-size: 25px;
+            font-weight: 300;
+            transition: background, font-weight 0.5s ease;
+            &:hover{
+              color: #d2961e;
+              background: #1e1e1e;
+              font-weight: 700;
+            }
+          }
+          &-image{
+            border: 3px #d2961e solid;
+            border-top: none;
+            width: 100%;
+          }
+        }
+        &-item{
+          width: 85%;
+          display: flex;
+          flex-direction: column;
+          &-edit{
+            border: 3px #d2961e solid;
+            border-top: none;
+            border-left: none;
+            background: #000;
+            color: #f8bc03;
+            text-align: center;
+            font-size: 25px;
+            font-weight: 300;
+            transition: background, font-weight 0.5s ease;
+            &:hover{
+              color: #d2961e;
+              background: #1e1e1e;
+              font-weight: 700;
+            }
+          }
+          &-block{
+            border: 3px #d2961e solid;
+            border-top: none;
+            border-left: none;
+            background: #000;
+            &-text{
+              text-align: center;
+              font-weight: 500;
+              color: #fff;
+            }
+          }
+        }
+      }
+      &-create{
+        display: flex;
+        flex-wrap: wrap;
+        &-item{
+          border: 3px #d2961e solid;
+          margin: 10px auto 0 auto;
+          background: #000;
+          text-align: center;
+          width: 50%;
+          &-theme{
+            display: inline-block;
+            height: 50px;
+            width: 100%;
+            font-size: 40px;
+            color: #fff;
+            font-weight: 300;
+            text-transform: uppercase;
+            transition: border,font-weight .5s ease;
+            &:hover{
+              font-weight: 700;
+              background: #1e1e1e;
+            }
+          }
+        }
+      }
       &-title{
         border: 3px #d2961e solid;
         background: #000;
-        align-items: center;
-        & span{
-          cursor: pointer;
-
-          &:hover{
-            color: #d2961e;
-          }
-          &:active{
-            color: #f8bc03;
-          }
-        }
         &-text{
           color: #fff;
           font-size: 40px;
@@ -265,86 +354,11 @@ header{
             font-size: 18px;
             font-weight: 300;
             transition: background, font-weight 0.5s ease;
+            width: 100%;
+            display: inherit;
             &:hover{
               font-weight: 700;
               background: #1e1e1e;
-            }
-          }
-        }
-      }
-      &-profile{
-        display: flex;
-        flex-direction: row;
-        &-picture{
-          display: flex;
-          flex-direction: column;
-          max-width: 25%;
-          width: 25%;
-          height: 250px;
-          border: 3px #d2961e solid;
-          border-top: none;
-          background: #000;
-          &-edit{
-            border-bottom: 3px #d2961e solid;
-            text-align: center;
-            font-size: 20px;
-            color: #d2961e;
-            background: #000000;
-            font-weight: 300;
-            transition: background, font-weight 0.5s ease;
-            & span{
-              font-weight: 100;
-            }
-            &:hover{
-              background: #1e1e1e;
-              font-weight: 700;
-            }
-          }
-          &-image{
-            max-width: 100%;
-            width: 100%;
-            height: 100%;
-            margin: 0 auto 10px auto;
-          }
-        }
-        &-item{
-          width: 100%;
-          max-width: 1000px;
-          margin: 0 auto;
-          &-edit{
-            display: inline-block;
-            border: 3px #d2961e solid;
-            border-top: none;
-            border-left: none;
-            text-align: center;
-            font-size: 20px;
-            color: #d2961e;
-            background: #000000;
-            font-weight: 300;
-            transition: background, font-weight 0.5s ease;
-            width: 100%;
-            & span{
-              font-weight: 100;
-            }
-            &:hover{
-              background: #1e1e1e;
-              font-weight: 700;
-            }
-          }
-          &-block{
-            max-width: 1000px;
-            width: 100%;
-            &-text{
-              display: inline-block;
-              max-width: 1000px;
-              width: 100%;
-              text-align: center;
-              font-size: 35px;
-              color: #fff;
-              background: #000000;
-              border: #d2961e 3px solid;
-              border-top: none;
-              border-left: none;
             }
           }
         }
@@ -352,4 +366,3 @@ header{
     }
   }
 }
-/* HOME END */
